# kernel_image_processing

./: CMakeLists.txt  README.md
resources/results/: deer480pOpenmpParallelUnrolling2Threads.ppm  deer480pOpenmpParallelUnrolling8Threads.ppm
src/: main.cpp
src/convolution/: Convolution.cpp  Convolution.h
src/image/: Image.cpp  Image.h  ImageSoA.cpp  ImageSoA.h  PpmParser.cpp  PpmParser.h
src/kernel/: Kernel.cpp  Kernel.h  KernelFactory.cpp  KernelFactory.h
src/utils/: OpenMPVersion.h  Utils.h
